# camping

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  manage.py  package.json  pyproject.toml  pytest.ini
assets/css/: style.css
camping/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  shortcuts.py  url_names.py  urls.py
core/migrations/: 0001_initial.py  0002_message.py
core/models/: __init__.py  models.py  projects.py
core/tests/: test_projects.py  tests.py
core/views/: __init__.py  base.py  projects.py
docs/: mkdocs.yml
docs/docs/: index.md
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
templates/: base.html  home.html
templates/projects/: message.html  message_create.html  message_delete.html  message_update.html  messages.html  project.html  project_create.html  project_delete.html  project_update.html
