[tool.poetry]
name = "camping"
version = "0.1.0"
description = "A Basecamp inspired clone for single users"
authors = ["Manuel Pascual Luna <manu.pascual.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.5"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-django = "^3.9.0"
isort = "^4.3.21"
ipython = "^7.13.0"
mkdocs = "^1.1"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
